--- a/package.json
+++ b/package.json
@@ -1,31 +1,54 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "deorianuradha",
-  "license": "ISC",
-  "description": "",
+  "name": "ecommerce",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.15.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@paypal/react-paypal-js": "^8.8.2",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
-    "cloudinary": "2.2.0",
-    "cors": "^2.8.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "bootstrap": "^4.1.3",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "express-jwt": "^8.5.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7",
-    "p-limit": "^3.1.0",
-    "razorpay": "^2.9.6"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-inner-image-zoom": "^3.0.2",
+    "react-range-slider-input": "^3.0.7",
+    "react-router-dom": "^6.28.0",
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "styled-components": "^6.1.13",
+    "swiper": "^11.1.15",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
