--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "ecommerce",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.15.14",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "@paypal/react-paypal-js": "^8.8.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
+    "@mui/styled-engine-sc": "^6.1.10",
     "axios": "^1.7.9",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.6.2",
+    "bootstrap-4-react": "^0.0.59",
+    "chart.js": "^4.4.7",
+    "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-inner-image-zoom": "^3.0.2",
-    "react-range-slider-input": "^3.0.7",
-    "react-router-dom": "^6.28.0",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.10.6",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.0.0",
+    "react-google-charts": "^5.2.1",
+    "react-icons": "^5.4.0",
+    "react-lazy-load-image-component": "^1.6.2",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "styled-components": "^6.1.13",
-    "swiper": "^11.1.15",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
