--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,21 @@
 {
   "short_name": "React App",
   "name": "Create React App Sample",
-  "icons": [ 
+  "icons": [
     {
-      "src": "new_logo.png",
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "logo192.png",
       "type": "image/png",
-      "sizes": "1080x1080"
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
